# A-Unified-Heat-Transfer-Coefficient-for-Phase-Change-Time-Prediction-Across-Biot-Number-Regimes

./: .gitignore  CITATION.cff  LICENSE  README.md  analytical_model.py  environment.yml  figure_1.py  numerical_solution.py  pyproject.toml  requirements.txt  setup.py
data/: material_properties.csv
data/experimental/: README.md  mueller_2015_supercooling.csv
data/numerical_results/: cylinder_validation.csv  planar_validation.csv
examples/: example1.py
figures/raw_plots/: Graphic 1.py  Graphic 2.py  Graphic 3.py
paper/: main.tex  references.bib
scripts/: figure_1.py  figure_2.py  figure_3.py
scripts/numerical_solver/: enthalpy_solver.py  requirements.txt  validation_simulations.py
src/: analytical_model.py  numerical_solver.py  utils.py  visualization.py
supplementary/: derivations_of_Phi.md
supplementary/supplementary/: mesh_independence_study.ipynb
tests/: __init__.py  run_all_tests.py  test_analytical_model.py  test_model_predictions.py  test_numerical_solver.py
