[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-heat-transfer-model"
version = "1.0.0"
authors = [
    {name = "Jair Patiño B.", email = "jairpalejandrov@gmail.com"}
]
description = "Unified heat transfer coefficient model for phase change time prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["heat-transfer", "phase-change", "stefan-problem", "thermal-energy-storage"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "flake8>=4.0.0",
    "sphinx>=4.3.0",
]
docs = [
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.7",
]

[project.urls]
Homepage = "https://github.com/jair-patino/A-Unified-Heat-Transfer-Coefficient-for-Phase-Change-Time-Prediction-Across-Biot-Number-Regimes"
Documentation = "https://github.com/jair-patino/A-Unified-Heat-Transfer-Coefficient-for-Phase-Change-Time-Prediction-Across-Biot-Number-Regimes#readme"
Repository = "https://github.com/jair-patino/A-Unified-Heat-Transfer-Coefficient-for-Phase-Change-Time-Prediction-Across-Biot-Number-Regimes.git"
Issues = "https://github.com/jair-patino/A-Unified-Heat-Transfer-Coefficient-for-Phase-Change-Time-Prediction-Across-Biot-Number-Regimes/issues"
